Improved routing and deep linking

--- a/platforms/ios/www/css/main.css
+++ b/platforms/ios/www/css/main.css
@@ -29,23 +29,18 @@
     color: #fff;
 }
 
-#wrapper{
-    background-color: #e74c3c;
-    color: #fff;
-}
-
 #wrapcultura{
     background-color: #e74c3c;
     color: #fff;
 }
 
 #wrapambiente{
-    background-color: #e74c3c;
+    background-color: #23ae5f;
     color: #fff;
 }
 
 #wrapimpgiov{
-    background-color: #e74c3c;
+    background-color: #3a97d3;
     color: #fff;
 }
 
