--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: "Open Sans";
+    src: url("../fonts/OpenSans-Regular.ttf") format("opentype");   
+        /* Make sure you defined the correct path, which is related to
+            the location of your file `my_css.css` */ 
+}
+
 .scroll{
     width: 100%;
     height: 100%;
@@ -29,23 +36,18 @@
     color: #fff;
 }
 
-#wrapper{
-    background-color: #e74c3c;
-    color: #fff;
-}
-
 #wrapcultura{
     background-color: #e74c3c;
     color: #fff;
 }
 
 #wrapambiente{
-    background-color: #e74c3c;
+    background-color: #23ae5f;
     color: #fff;
 }
 
-#wrapimpgiov{
-    background-color: #e74c3c;
+#wrapimprenditoriagiovanile{
+    background-color: #3a97d3;
     color: #fff;
 }
 
